<resources>
    <string name="app_name">LTweaksMAGI</string>
    <string name="app_ok">OK</string>
    <string name="title_status">Status</string>
    <string name="status_updated_dex">Dex is already updated.</string>
    <string name="status_reboot_dex">Dex is just updated, reboot to take effect.</string>
    <string name="status_updated_assets">Assets is already updated.</string>
    <string name="status_reboot_assets">Assets is just updated, reboot to take effect.</string>
    <string name="status_error">ERROR! Check logcat for more details.</string>
    <string name="title_category">Category</string>
    <string name="not_supported">Not supported.</string>
    <string name="error">Error.</string>
    <string name="set">Set.</string>
    <string name="all">All</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>

    <!-- Google -->
    <string name="pref_header_google">Google</string>
    <string name="pref_category_chrome">Chrome</string>
    <string name="pref_chrome_incognito_search">Incognito search</string>
    <string name="pref_chrome_incognito_search_summary">Incognito search, incognito url open</string>
    <string name="pref_chrome_custom_tab_shortcut">Custom tab shortcut</string>
    <string name="pref_chrome_custom_tab_shortcut_summary">Create custom tab shortcut on launcher</string>
    <string name="pref_category_gms">Google Play Services</string>
    <string name="pref_gms_no_update_popup">No system update popup</string>

    <!-- Chrome -->
    <string name="chrome_create_custom_tab_shortcut">Create chrome custom tab shortcut</string>
    <string name="chrome_url">Url</string>
    <string name="chrome_label">Label</string>

    <!-- Shopping -->
    <string name="pref_header_shopping">Shopping</string>
    <string name="pref_category_alipay">Alipay</string>
    <string name="pref_alipay_fingerprint">Use fingerprint to confirm payment</string>
    <string name="pref_alipay_fingerprint_summary">Use password for first payment, then fingerprint can be used at next time</string>
    <string name="pref_category_taobao">Taobao</string>
    <string name="pref_taobao_fingerprint">Use fingerprint to confirm payment</string>
    <string name="pref_taobao_fingerprint_summary">Use password for first payment, then fingerprint can be used at next time</string>
    <string name="pref_category_xiachufang">Xiachufang</string>
    <string name="pref_xiachufang_remove_splash">Remove splash</string>

    <!--Communication-->
    <string name="pref_header_communication">Communication</string>
    <string name="pref_category_ttrss">Tiny Tiny RSS</string>
    <string name="pref_ttrss_toolbar_no_hide">Disable toolbar hide on scroll</string>
    <string name="pref_ttrss_refresh_menu">Put refresh button to top right menu</string>
    <string name="pref_ttrss_disable_article_pager">Disable article pager</string>
    <string name="pref_category_telegram">Telegram</string>
    <string name="pref_telegram_remove_floating_button">*Remove floating button</string>
    <string name="pref_telegram_dismiss_allow_background">Dismiss allow background activity hint</string>
    <string name="pref_telegram_swipe_seek_video">Swipe left/right to seek video</string>
    <string name="pref_telegram_swipe_seek_video_summary">Double tap to play/pause.\nStop loop.\nTap top right corner on video to share image.\nMove play/pause button to bottom left</string>
    <string name="pref_telegram_open_url_without_confirmation">Open url without confirmation</string>
    <string name="pref_telegram_disable_reaction_menu">*Disable reaction menu</string>
    <string name="pref_telegram_hide_stories">*Hide stories</string>
    <string name="pref_telegram_remove_ad">*Remove ad</string>
    <string name="pref_category_wechat">WeChat</string>
    <string name="pref_wechat_expand_subscribed_list">Expand subscribed article list</string>
    <string name="pref_wechat_fingerprint">Use fingerprint to confirm payment</string>
    <string name="pref_wechat_fingerprint_summary">Use password for first payment, then fingerprint can be used at next time</string>
    <string name="pref_category_qq">QQ</string>
    <string name="pref_qq_external_browser">Use external browser</string>
    <string name="pref_qq_darken_splash">Darken splash</string>

    <!-- TTRss -->
    <string name="ttrss_refresh">Refresh</string>

    <!-- Entertainment -->
    <string name="pref_header_entertainment">Entertainment</string>
    <string name="pref_category_bilibili">Bilibili</string>
    <string name="pref_bilibili_expand_desc">Expand description by default</string>
    <string name="pref_bilibili_disable_teen_mode_hint">Disable teen mode hint</string>
    <string name="pref_bilibili_disable_splash">Disable splash</string>
    <string name="pref_bilibili_darken_splash">Darken splash</string>
    <string name="pref_bilibili_remove_author_ad">Remove author recommended ad</string>
    <string name="pref_bilibili_search">Search in Bilibili with selected text</string>
    <string name="pref_bilibili_search_summary">Use floating menu with text selection</string>
    <string name="pref_bilibili_danmaku_off">Danmaku off by default</string>
    <string name="pref_bilibili_danmaku_off_summary">You need toggle \"remember danmaku state\" on</string>
    <string name="pref_category_douban">Douban</string>
    <string name="pref_douban_disable_splash">Disable splash</string>
    <string name="pref_douban_remove_ad">*Remove ad</string>
    <string name="pref_douban_search">Search in Douban with selected text</string>
    <string name="pref_douban_search_summary">Use floating menu with text selection</string>
    <string name="pref_category_mxplayer">MX Player</string>
    <string name="pref_mxplayer_danmaku">MX Danmaku</string>
    <string name="pref_mxplayer_danmaku_summary">Communicate with \"MX Danmaku\" to show danmaku</string>
    <string name="pref_mxplayer_rclone_mount">rclone mount</string>
    <string name="pref_mxplayer_rclone_mount_summary">Mount /sdcard/rclone_mxplayer.conf</string>
    <string name="pref_category_comic_screen">Comic Screen</string>
    <string name="pref_comic_screen_rclone_mount">rclone mount</string>
    <string name="pref_comic_screen_rclone_mount_summary">Mount /sdcard/rclone_comic_screen.conf</string>
    <string name="pref_category_pica_comic">Pica Comic</string>
    <string name="pref_pica_comic_remove_ads">Remove ads</string>

    <!-- System -->
    <string name="pref_header_system">System / Tools</string>
    <string name="pref_category_text">Text</string>
    <string name="pref_text_selectable_text">Selectable Text</string>
    <string name="pref_text_selectable_text_summary">Add a item in share menu, to display or reprocess shared text</string>
    <string name="pref_category_system_share">System Share</string>
    <string name="pref_system_share_copy_to_share">Copy to share</string>
    <string name="pref_system_share_copy_to_share_summary">When you copy text, a snackbar will appear for you to trigger share action.\nGboard must be default input method</string>
    <string name="pref_system_share_disable_direct">Disable direct share</string>
    <string name="pref_system_share_disable_direct_summary">Do not use if share list too long</string>
    <string name="pref_system_share_filter">Hide share menu items</string>
    <string name="pref_category_quick_settings">Quick Settings in status bar</string>
    <string name="pref_quick_settings_tile_set_preconfigured_brightness">Add tile \"Set xxx brightness\"</string>
    <string name="pref_quick_settings_tile_set_preconfigured_brightness_summary">Valid range 1-254, leave empty to disable.\nLong press tile to set auto brightness.</string>
    <string name="pref_category_launcher">Pixel Launcher</string>
    <string name="pref_launcher_overview_share">Enable overview share</string>
    <string name="pref_launcher_fix_recents">*Fix recents</string>
    <string name="pref_launcher_fix_recents_summary">When tap recents button, it\'ll slide to the 2nd task preview sometime, fix this.</string>
    <string name="pref_category_system_ui">System UI</string>
    <string name="pref_nav_bar_input_cursor_control">*Input cursor control</string>
    <string name="pref_nav_bar_input_cursor_control_summary">Add left / right buttons on navigation bar to control cursor at inputting</string>
    <string name="pref_system_ui_clipboard_overlay_disable">*Disable clipboard overlay</string>
    <string name="pref_category_solid_explorer">Solid Explorer</string>
    <string name="pref_solid_explorer_replace_streaming_url">Replace streaming url</string>
    <string name="pref_solid_explorer_replace_streaming_url_summary">Replace server only, eg. SMB01:10.0.0.1,SMB02:10.0.0.2\nThus, player can access http://10.0.0.1/... to play video directly, instead of local redirect</string>
    <string name="pref_solid_explorer_highlight_visited_files">Highlight visited files</string>
    <string name="pref_solid_explorer_highlight_visited_files_summary">It\'s very useful if you use Solid Explorer to play episodes</string>
    <string name="pref_category_text_scanner">Text Scanner</string>
    <string name="pref_text_scanner_no_camera">Don\'t open camera if scan shared image</string>

    <!-- Text -->
    <string name="text_selectable">Selectable Text</string>
    <string name="process_text_incognito_search">Incognito Search</string>
    <string name="process_text_bilibili">Bilibili</string>
    <string name="process_text_douban">Douban</string>
</resources>