<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_bilibili">
        <SwitchPreference
            android:defaultValue="false"
            android:key="bilibili_expand_desc"
            android:title="@string/pref_bilibili_expand_desc" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="bilibili_disable_teen_mode_hint"
            android:title="@string/pref_bilibili_disable_teen_mode_hint" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="bilibili_disable_splash"
            android:title="@string/pref_bilibili_disable_splash" />
        <Preference
            android:key="bilibili_darken_splash"
            android:title="@string/pref_bilibili_darken_splash" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="bilibili_remove_author_ad"
            android:title="@string/pref_bilibili_remove_author_ad" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="bilibili_search"
            android:title="@string/pref_bilibili_search"
            android:summary="@string/pref_bilibili_search_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="bilibili_danmaku_off"
            android:title="@string/pref_bilibili_danmaku_off"
            android:summary="@string/pref_bilibili_danmaku_off_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_douban">
        <SwitchPreference
            android:defaultValue="false"
            android:key="douban_disable_splash"
            android:title="@string/pref_douban_disable_splash" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="douban_search"
            android:title="@string/pref_douban_search"
            android:summary="@string/pref_douban_search_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_mxplayer">
        <SwitchPreference
            android:defaultValue="false"
            android:key="mxplayer_danmaku"
            android:title="@string/pref_mxplayer_danmaku"
            android:summary="@string/pref_mxplayer_danmaku_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="mxplayer_rclone_mount"
            android:title="@string/pref_mxplayer_rclone_mount"
            android:summary="@string/pref_mxplayer_rclone_mount_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_comic_screen">
        <SwitchPreference
            android:defaultValue="false"
            android:key="comic_screen_rclone_mount"
            android:title="@string/pref_comic_screen_rclone_mount"
            android:summary="@string/pref_comic_screen_rclone_mount_summary" />
    </PreferenceCategory>
</PreferenceScreen>
