<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_ttrss">
        <SwitchPreference
            android:defaultValue="false"
            android:key="ttrss_toolbar_no_hide"
            android:title="@string/pref_ttrss_toolbar_no_hide" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="ttrss_refresh_menu"
            android:title="@string/pref_ttrss_refresh_menu" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="ttrss_disable_article_pager"
            android:title="@string/pref_ttrss_disable_article_pager" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_telegram">
        <SwitchPreference
            android:defaultValue="false"
            android:key="telegram_remove_floating_button"
            android:title="@string/pref_telegram_remove_floating_button" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="telegram_dismiss_allow_background"
            android:title="@string/pref_telegram_dismiss_allow_background" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_qq">
        <SwitchPreference
            android:defaultValue="false"
            android:key="qq_external_browser"
            android:title="@string/pref_qq_external_browser" />
    </PreferenceCategory>
</PreferenceScreen>
