<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_chrome">
        <SwitchPreference
            android:defaultValue="false"
            android:key="chrome_incognito_search"
            android:title="@string/pref_chrome_incognito_search"
            android:summary="@string/pref_chrome_incognito_search_summary" />
        <Preference
            android:defaultValue="false"
            android:key="chrome_custom_tab_shortcut"
            android:title="@string/pref_chrome_custom_tab_shortcut"
            android:summary="@string/pref_chrome_custom_tab_shortcut_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_gms">
        <SwitchPreference
            android:defaultValue="false"
            android:key="gms_no_update_popup"
            android:title="@string/pref_gms_no_update_popup" />
    </PreferenceCategory>
</PreferenceScreen>
