<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/title_status">
        <Preference
            app:key="status_dex" />
        <Preference
            app:key="status_assets" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_category">
        <Preference
            app:fragment="li.lingfeng.magi.fragments.GooglePrefFragment"
            app:title="@string/pref_header_google" />
        <Preference
            app:fragment="li.lingfeng.magi.fragments.ShoppingPrefFragment"
            app:title="@string/pref_header_shopping" />
        <Preference
            app:fragment="li.lingfeng.magi.fragments.CommunicationPrefFragment"
            app:title="@string/pref_header_communication" />
        <Preference
            app:fragment="li.lingfeng.magi.fragments.EntertainmentPrefFragment"
            app:title="@string/pref_header_entertainment" />
        <Preference
            app:fragment="li.lingfeng.magi.fragments.SystemPrefFragment"
            app:title="@string/pref_header_system" />
    </PreferenceCategory>

</PreferenceScreen>